# MFCC_Core

./: .gitignore  404.html  CMakeLists.txt  Makefile  README.md  about.html  benchmark.sh  compare_hex_dumps.py  contributing.html  get_started.html  index.html  mel_tb  mkdocs.yml  requirements.txt  run_simulation.sh  sitemap.xml
benchmarks/: artix.tcl  artix_utilization_hierarchical.rpt  artix_utilization_post_route.rpt  artymini.tcl  benchmark.sh  calc_fmax.py  get_all_stats.sh  get_area.sh  get_area_gate.sh  get_power.sh  gowin.tcl  kintex.tcl  kintex_power_post_route.rpt  kintex_timing_post_route.rpt  kintex_utilization_hierarchical.rpt  kintex_utilization_post_route.rpt  mfcc.v  mfcc2.v  mfcc_1024.v  mfcc_256.v  mfcc_wrapper.v  operation_time.py  run_ecp5.sh  run_ecp5_85.sh  run_gowin.sh  run_xilinx.sh  tight_setup_hold_pins.txt  virtex.tcl  virtex_power_post_route.rpt  virtex_timing_post_route.rpt  virtex_utilization_hierarchical.rpt  virtex_utilization_post_route.rpt  xilinx.xdc  zynq.tcl  zynq_utilization_hierarchical.rpt  zynq_utilization_post_route.rpt
data/: fft_dump.hex  fft_input_1.hex  fft_input_5.hex  fft_input_7.hex  hamming_dump_1.hex  hamming_dump_2.hex  hamming_dump_3.hex  hamming_dump_4.hex  hamming_dump_5.hex  hamming_dump_6.hex  hamming_dump_7.hex  hamming_dump_mfcc_0.hex  hamming_dump_mfcc_5.hex  mel_in_data_0.hex  mel_in_data_1.hex  power_spectrum.hex
docs/: contributing.en.md  contributing.md
en/: about.html  contributing.html  get_started.html  index.html
lib/: dct.h  fft.h  mel.h  process.h  q15.h  q15_fft.h  q8_8.h  wav.h
roc/: process.hip
rtl/: MFCC_Core.sv  base2log.sv  complex.sv  dct.sv  (+12 more)
(+125 files in other folders)
